force-app/main/default/objects/Summary_Daily__c/Summary_Daily__c.object-meta.xml
<CustomObject>
    <label>Summary Daily</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Summary Daily  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Summary Daily</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>