force-app/main/default/objects/Summary_Daily__c/fields/Abandon__c.field-meta.xml
<CustomField>
    <fullName>Abandon__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Abandon</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>