force-app/main/default/objects/Summary_Daily__c/fields/Abandon_Drop_By_System__c.field-meta.xml
<CustomField>
    <fullName>Abandon_Drop_By_System__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Abandon - Drop By System</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>