force-app/main/default/objects/Summary_Daily__c/fields/Abandon_f__c.field-meta.xml
<CustomField>
    <fullName>Abandon_f__c</fullName>
    <formula>IF( Call_Offered__c &gt;0, Abandon__c / Call_Offered__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Abandon %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>