force-app/main/default/objects/Summary_Daily__c/fields/Abandon_More_than_5_second__c.field-meta.xml
<CustomField>
    <fullName>Abandon_More_than_5_second__c</fullName>
    <label>Abandon - More than 5 second</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>