force-app/main/default/objects/Summary_Daily__c/fields/AHT__c.field-meta.xml
<CustomField>
    <fullName>AHT__c</fullName>
    <defaultValue>0</defaultValue>
    <label>AHT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>