force-app/main/default/objects/Summary_Daily__c/fields/AHT_Hours__c.field-meta.xml
<CustomField>
    <fullName>AHT_Hours__c</fullName>
    <formula>FLOOR(AHT__c/3600)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AHT Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>