force-app/main/default/objects/Summary_Daily__c/fields/AHT_Time__c.field-meta.xml
<CustomField>
    <fullName>AHT_Time__c</fullName>
    <defaultValue>&apos;00:00:00&apos;</defaultValue>
    <label>AHT Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>