force-app/main/default/objects/Summary_Daily__c/fields/Answered_Call_Distribution_20sec__c.field-meta.xml
<CustomField>
    <fullName>Answered_Call_Distribution_20sec__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Answered Call Distribution(&lt;20sec)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>