force-app/main/default/objects/Summary_Daily__c/fields/Interval__c.field-meta.xml
<CustomField>
    <fullName>Interval__c</fullName>
    <formula>IF( TEXT(  Type__c ) = &apos;Monthly&apos; ,  CASE( MONTH( Date__c ) ,
1, &quot;Jan&quot;,
2, &quot;Feb&quot;,
3, &quot;Mar&quot;,
4, &quot;Apr&quot;,
5, &quot;May&quot;,
6, &quot;Jun&quot;,
7, &quot;Jul&quot;,
8, &quot;Aug&quot;,
9, &quot;Sep&quot;,
10, &quot;Oct&quot;,
11, &quot;Nov&quot;,
&quot;Dec&quot;)+&quot;-&quot;+ TEXT(YEAR(Date__c ))  , TEXT(Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interval</label>
    <type>Text</type>
</CustomField>