force-app/main/default/objects/Summary_Daily__c/fields/On_back_up__c.field-meta.xml
<CustomField>
    <fullName>On_back_up__c</fullName>
    <label>On back up</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>