force-app/main/default/objects/Summary_Daily__c/fields/On_sick__c.field-meta.xml
<CustomField>
    <fullName>On_sick__c</fullName>
    <defaultValue>0</defaultValue>
    <label>On sick</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>