force-app/main/default/objects/Summary_Daily__c/fields/People_Available_Staff__c.field-meta.xml
<CustomField>
    <fullName>People_Available_Staff__c</fullName>
    <formula>People_Available_Staff_Back_Up__c -  On_back_up__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Staff</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>