force-app/main/default/objects/Summary_Daily__c/fields/People_Available_Staff_Back_Up__c.field-meta.xml
<CustomField>
    <fullName>People_Available_Staff_Back_Up__c</fullName>
    <defaultValue>0</defaultValue>
    <label>People Available Staff &amp; Back Up</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>