force-app/main/default/objects/Summary_Daily__c/fields/People_Percent__c.field-meta.xml
<CustomField>
    <fullName>People_Percent__c</fullName>
    <formula>IF( People_Standby__c &gt;0, People_Available_Staff_Back_Up__c /  People_Standby__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>People</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>