force-app/main/default/objects/Summary_Daily__c/fields/People_Standby__c.field-meta.xml
<CustomField>
    <fullName>People_Standby__c</fullName>
    <formula>People_Available_Staff_Back_Up__c +  On_leave__c +  On_sick__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>People Standby</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>