force-app/main/default/objects/Summary_Daily__c/fields/Service_Level__c.field-meta.xml
<CustomField>
    <fullName>Service_Level__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Service Level</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>