force-app/main/default/objects/Summary_Daily__c/fields/Service_Level_Percent__c.field-meta.xml
<CustomField>
    <fullName>Service_Level_Percent__c</fullName>
    <formula>IF(Call_Offered__c&gt;0,Answered_Call_Distribution_20sec__c /  Call_Offered__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Level</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>