force-app/main/default/objects/Summary_Daily__c/listViews/On_Backup_need_Filled.listView-meta.xml
<ListView>
    <fullName>On_Backup_need_Filled</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>On_back_up__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>On_back_up__c</field>
        <operation>equals</operation>
    </filters>
    <label>On Backup need Filled</label>
    <language>en_US</language>
</ListView>